--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/main.js",
-    "start:custom": "node src/main.js --excersise=2 --iterations=1000 --filter=def,nes --debugLogs=true"
+    "start:custom": "node src/main.js --excersise=2 --iterations=1000 --filter=def,nes --debugLogs=true",
+    "start:quick": "node src/main.js -e=2 -i=10 --f=def -d=true"
   },
   "repository": {
     "type": "git",
